workloads/core/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  to:
    kind: Service
    name: keycloak-service
  port:
    targetPort: https
  tls:
    termination: passthrough
